# test-intitek

./: .gitignore  API_EXAMPLES.md  PERFORMANCE_TEST_SCRIPT.md  README.md  SETUP.md  TAURI_VS_WAILS_COMPARISON.md
backend/: .env.example  .gitignore  LOGGING.md  WAILS_CONFIG.md  app.go  build.bat  build.sh  go.mod  go.sum  main.go  run-debug.bat  wails.json
backend/config/: config.go
backend/controllers/: auth_controller.go  product_controller.go
backend/database/: database.go  seeds.go
backend/frontend-dist/: index.html
backend/frontend-dist/assets/: Dashboard-BgcnpjPp.js  Dashboard-DBHjTPS5.css  Layout-DTZ3Qj48.js  Layout-Dw3uMNzc.css  Login-BjV9Ecd7.js  Login-D0DsFPUI.css  Products-B_ujfj25.js  Products-BdPOhCI8.css  index-CZvygxan.js  index-y8poTq5G.css  productService-DrJwBtO8.js
backend/logger/: logger.go
backend/middleware/: auth.go
backend/models/: product.go  user.go
backend/routes/: routes.go
frontend/: TABLE_SORTING.md  TAURI_CONFIG_GUIDE.md  TOAST_NOTIFICATIONS.md  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: README.md  version-bump.bat  version-bump.js  version-bump.sh
frontend/src/: App.vue  main.js
frontend/src-tauri/: Cargo.toml  LOGGING.md  TAURI_SETUP.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/assets/: styles.css
frontend/src/components/: BarChart.vue  Toast.vue
frontend/src/composables/: useToast.js
frontend/src/router/: index.js
frontend/src/services/: api.js  productService.js
frontend/src/stores/: auth.js
(+5 files in other folders)
