[package]
name = "warehouse-management-frontend"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "warehouse-management-frontend"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-log = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

